// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderListItem /> should render correctly when the request type is 'MIMO_START' and the current language is en 1`] = `
<div
  className="dte-wismo-order-list-item"
  id="order-MI12345678"
>
  <div
    className="icon"
  >
    <svg
      className="dte-wismo-order-list-item-icon"
      fill="none"
      height="58"
      viewBox="0 0 34 58"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        start order
      </title>
      <path
        d="M1 16C1 15.4477 1.44772 15 2 15H32C32.5523 15 33 15.4477 33 16V37C33 40.866 29.866 44 26 44H8C4.13401 44 1 40.866 1 37V16Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M7 3C7 1.89543 7.89543 1 9 1H10C11.1046 1 12 1.89543 12 3V15H7V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M22 3C22 1.89543 22.8954 1 24 1H25C26.1046 1 27 1.89543 27 3V15H22V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M5.02124 56.3499C7.73517 56.3499 13.1835 56.6666 15.4086 53.9259C17.6338 51.1852 18.1999 45.985 17.6012 44.0577"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M18.8224 39.0071L14.5581 29.6487L20.4274 29.7357L16.1777 19.3992"
        stroke="currentColor"
        strokeWidth="2"
      />
    </svg>
  </div>
  <div
    className="content"
  >
    <div
      className="content-header"
    >
      <div
        className="title"
      >
        Start Service 
      </div>
      <div
        className="order-number"
      >
        <span
          className="label"
        >
          Order No.
        </span>
        <span
          className="value"
        >
          <span>
            MI 1234 5678
          </span>
        </span>
      </div>
    </div>
    <div
      className="address"
    >
      <address
        className="dte-wismo-address"
      >
        1 Bagshot Row
Hobbiton, TS 02890
      </address>
    </div>
    <div
      className="details-link"
    >
      <a
        href="/orders/MI12345678"
        onClick={[Function]}
        target="_self"
      >
        Details
        <svg
          className="bi bi-chevron-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L10.293 8 4.646 2.354a.5.5 0 010-.708z"
            fillRule="evenodd"
            stroke="currentColor"
            strokeWidth="1"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<OrderListItem /> should render correctly when the request type is 'MIMO_START' and the current language is es 1`] = `
<div
  className="dte-wismo-order-list-item"
  id="order-MI12345678"
>
  <div
    className="icon"
  >
    <svg
      className="dte-wismo-order-list-item-icon"
      fill="none"
      height="58"
      viewBox="0 0 34 58"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        start order
      </title>
      <path
        d="M1 16C1 15.4477 1.44772 15 2 15H32C32.5523 15 33 15.4477 33 16V37C33 40.866 29.866 44 26 44H8C4.13401 44 1 40.866 1 37V16Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M7 3C7 1.89543 7.89543 1 9 1H10C11.1046 1 12 1.89543 12 3V15H7V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M22 3C22 1.89543 22.8954 1 24 1H25C26.1046 1 27 1.89543 27 3V15H22V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M5.02124 56.3499C7.73517 56.3499 13.1835 56.6666 15.4086 53.9259C17.6338 51.1852 18.1999 45.985 17.6012 44.0577"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M18.8224 39.0071L14.5581 29.6487L20.4274 29.7357L16.1777 19.3992"
        stroke="currentColor"
        strokeWidth="2"
      />
    </svg>
  </div>
  <div
    className="content"
  >
    <div
      className="content-header"
    >
      <div
        className="title"
      >
        Empieza el servicio 
      </div>
      <div
        className="order-number"
      >
        <span
          className="label"
        >
          No. de pedido
        </span>
        <span
          className="value"
        >
          <span>
            MI 1234 5678
          </span>
        </span>
      </div>
    </div>
    <div
      className="address"
    >
      <address
        className="dte-wismo-address"
      >
        1 Bagshot Row
Hobbiton, TS 02890
      </address>
    </div>
    <div
      className="details-link"
    >
      <a
        href="/orders/MI12345678"
        onClick={[Function]}
        target="_self"
      >
        Detalles
        <svg
          className="bi bi-chevron-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L10.293 8 4.646 2.354a.5.5 0 010-.708z"
            fillRule="evenodd"
            stroke="currentColor"
            strokeWidth="1"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<OrderListItem /> should render correctly when the request type is 'MIMO_STOP' and the current language is en 1`] = `
<div
  className="dte-wismo-order-list-item"
  id="order-MI12345678"
>
  <div
    className="icon"
  >
    <svg
      className="dte-wismo-order-list-item-icon"
      fill="none"
      height="58"
      viewBox="0 0 34 58"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        start order
      </title>
      <path
        d="M1 16C1 15.4477 1.44772 15 2 15H32C32.5523 15 33 15.4477 33 16V37C33 40.866 29.866 44 26 44H8C4.13401 44 1 40.866 1 37V16Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M7 3C7 1.89543 7.89543 1 9 1H10C11.1046 1 12 1.89543 12 3V15H7V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M22 3C22 1.89543 22.8954 1 24 1H25C26.1046 1 27 1.89543 27 3V15H22V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M5.02124 56.3499C7.73517 56.3499 13.1835 56.6666 15.4086 53.9259C17.6338 51.1852 18.1999 45.985 17.6012 44.0577"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M18.8224 39.0071L14.5581 29.6487L20.4274 29.7357L16.1777 19.3992"
        stroke="currentColor"
        strokeWidth="2"
      />
    </svg>
  </div>
  <div
    className="content"
  >
    <div
      className="content-header"
    >
      <div
        className="title"
      >
        Start Service 
      </div>
      <div
        className="order-number"
      >
        <span
          className="label"
        >
          Order No.
        </span>
        <span
          className="value"
        >
          <span>
            MI 1234 5678
          </span>
        </span>
      </div>
    </div>
    <div
      className="address"
    >
      <address
        className="dte-wismo-address"
      >
        1 Bagshot Row
Hobbiton, TS 02890
      </address>
    </div>
    <div
      className="details-link"
    >
      <a
        href="/orders/MI12345678"
        onClick={[Function]}
        target="_self"
      >
        Details
        <svg
          className="bi bi-chevron-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L10.293 8 4.646 2.354a.5.5 0 010-.708z"
            fillRule="evenodd"
            stroke="currentColor"
            strokeWidth="1"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<OrderListItem /> should render correctly when the request type is 'MIMO_STOP' and the current language is es 1`] = `
<div
  className="dte-wismo-order-list-item"
  id="order-MI12345678"
>
  <div
    className="icon"
  >
    <svg
      className="dte-wismo-order-list-item-icon"
      fill="none"
      height="58"
      viewBox="0 0 34 58"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        start order
      </title>
      <path
        d="M1 16C1 15.4477 1.44772 15 2 15H32C32.5523 15 33 15.4477 33 16V37C33 40.866 29.866 44 26 44H8C4.13401 44 1 40.866 1 37V16Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M7 3C7 1.89543 7.89543 1 9 1H10C11.1046 1 12 1.89543 12 3V15H7V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M22 3C22 1.89543 22.8954 1 24 1H25C26.1046 1 27 1.89543 27 3V15H22V3Z"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M5.02124 56.3499C7.73517 56.3499 13.1835 56.6666 15.4086 53.9259C17.6338 51.1852 18.1999 45.985 17.6012 44.0577"
        stroke="currentColor"
        strokeWidth="2"
      />
      <path
        d="M18.8224 39.0071L14.5581 29.6487L20.4274 29.7357L16.1777 19.3992"
        stroke="currentColor"
        strokeWidth="2"
      />
    </svg>
  </div>
  <div
    className="content"
  >
    <div
      className="content-header"
    >
      <div
        className="title"
      >
        Empieza el servicio 
      </div>
      <div
        className="order-number"
      >
        <span
          className="label"
        >
          No. de pedido
        </span>
        <span
          className="value"
        >
          <span>
            MI 1234 5678
          </span>
        </span>
      </div>
    </div>
    <div
      className="address"
    >
      <address
        className="dte-wismo-address"
      >
        1 Bagshot Row
Hobbiton, TS 02890
      </address>
    </div>
    <div
      className="details-link"
    >
      <a
        href="/orders/MI12345678"
        onClick={[Function]}
        target="_self"
      >
        Detalles
        <svg
          className="bi bi-chevron-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L10.293 8 4.646 2.354a.5.5 0 010-.708z"
            fillRule="evenodd"
            stroke="currentColor"
            strokeWidth="1"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
